--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 
-<BorderPane fx:id="rootPane" xmlns:fx="http://javafx.com/fxml" fx:controller="org.PosPrueba.View.Ui.MainControllerFX">
+<?import java.net.URL?>
+<BorderPane fx:id="rootPane"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="org.PosPrueba.View.Ui.MainControllerFX">
+
+    <!-- ✅ Agregar stylesheets AQUÍ -->
+    <stylesheets>
+        <URL value="@../styles/styles.css"/>
+    </stylesheets>
+
     <top>
         <MenuBar>
             <Menu text="Archivo">
@@ -14,4 +22,5 @@
             </Menu>
         </MenuBar>
     </top>
+
 </BorderPane>
