--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 
-<?import java.net.URL?>
-<BorderPane fx:id="rootPane"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.PosPrueba.View.Ui.MainControllerFX">
-
-    <!-- ✅ Agregar stylesheets AQUÍ -->
-    <stylesheets>
-        <URL value="@../styles/styles.css"/>
-    </stylesheets>
-
+<BorderPane fx:id="rootPane" xmlns:fx="http://javafx.com/fxml" fx:controller="org.PosPrueba.View.Ui.MainControllerFX">
     <top>
         <MenuBar>
             <Menu text="Archivo">
@@ -22,5 +14,4 @@
             </Menu>
         </MenuBar>
     </top>
-
 </BorderPane>
