--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -5,7 +5,12 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuItem?>
 
+<?import java.net.URL?>
 <BorderPane fx:id="rootPane" xmlns:fx="http://javafx.com/fxml" fx:controller="org.PosPrueba.View.Ui.MainControllerFX">
+    <stylesheets>
+        <URL value="@../styles/styles.css"/>
+    </stylesheets>
+
     <top>
         <MenuBar>
             <Menu text="Archivo">
