--- a/src/main/resources/fxml/Login.fxml
+++ b/src/main/resources/fxml/Login.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
+<?import java.net.URL?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.PosPrueba.View.Ui.LoginController"
       alignment="CENTER"
@@ -12,7 +13,7 @@
       prefHeight="500"
       styleClass="login-container">
 
-    <!-- ✅ Agregar stylesheets AQUÍ -->
+    <!-- ✅ AGREGAR ESTO -->
     <stylesheets>
         <URL value="@../styles/styles.css"/>
     </stylesheets>
