feat(): traer productos de la base de datos a la ui

--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -150,6 +150,10 @@
     -fx-background-radius: 6px;
 }
 
+.table-view .column-header-background .label {
+    -fx-text-fill: white;
+}
+
 .table-view .column-header {
     -fx-background-color: #2e3a59;
     -fx-text-fill: white;
